--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,12 +18,13 @@
 
     <fragment
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/home_FRAG_navigator_bar"
         android:name="com.idan_koren_israeli.sailtracker.NavigationBar"
-        />
+        tools:layout="@layout/fragment_navigation_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
