--- a/app/src/main/res/layout/navigation_icon_gallery.xml
+++ b/app/src/main/res/layout/navigation_icon_gallery.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="65dp"
-    android:layout_height="65dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/navigation_layout_home"
     android:clickable="true"
-    android:layout_weight="1"
     >
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/icon_button"
+        style="@style/NavigatorIcon"
+        android:src="@drawable/ic_baseline_image_24"
+        android:contentDescription="@string/gallery"
+        android:id="@+id/navigation_icon_IMG_image"
         />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:includeFontPadding="false"
-        android:autoSizeTextType="uniform"
-        android:gravity="center"
+    <androidx.appcompat.widget.AppCompatTextView
+        style="@style/NavigatorText"
         android:text="@string/gallery"
-        android:id="@+id/text_title"
-        android:textColor="@android:color/black"
+        android:id="@+id/navigation_icon_LBL_text"
         />
 
 </LinearLayout>
