--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -57,6 +57,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/home_INV_3"
             android:id="@+id/home_FRAG_profile"
+            android:name="com.idan_koren_israeli.sailtracker.ProfileCard"
+            tools:layout="@layout/fragment_profile_card"
             />
 
         <View
@@ -68,6 +70,7 @@
             app:layout_constraintBottom_toTopOf="@id/home_FRAG_next_sailing"
             android:id="@+id/home_INV_3"
             />
+
 
         <fragment
             android:layout_width="match_parent"
