Redesigned profile card view fragment UI elements

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,8 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="ShapeAppearanceOverlay.App.CornerSize10Percent" parent="">
-        <item name="cornerSize">10%</item>
+    <style name="ShapeAppearanceOverlay.App.ProfilePictureCorners" parent="">
+        <item name="cornerSize">15%</item>
     </style>
 
 </resources>
