--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -71,8 +71,7 @@
             android:id="@+id/home_INV_3"
             />
 
-
-        <fragment
+        <View
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.3"
