--- a/app/src/main/res/layout/fragment_profile_card.xml
+++ b/app/src/main/res/layout/fragment_profile_card.xml
@@ -1,83 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ProfileCard">
+    android:background="@android:color/darker_gray"
+    >
 
 
-    <!-- Source will be loaded on runtime using Gide -->
-    <com.google.android.material.imageview.ShapeableImageView
+    <!-- setting image inside constraint layout in order to be able to force it to be squared -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.3"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
-        android:background="@android:color/transparent"
-        android:id="@+id/profile_card_IMG_picture"
-        />
-    
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        android:lines="1"
-        android:autoSizeTextType="uniform"
-        android:padding="15dp"
-        android:id="@+id/profile_card_LBL_name"
-        app:layout_constraintStart_toEndOf="@id/profile_card_IMG_picture"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/app_name"
-        />
-
-
-    <!-- Points Logo -->
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/profile_card_IMG_picture"
-        app:layout_constraintTop_toBottomOf="@id/profile_card_LBL_name"
-        app:layout_constraintWidth_percent="0.2"
-        app:layout_constraintDimensionRatio="1:1"
-        android:id="@+id/profile_card_IMG_points"
-        android:contentDescription="@string/points"
-
-        />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-
-        android:lines="1"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMaxTextSize="25sp"
-        android:padding="15dp"
-        android:id="@+id/profile_card_LBL_points"
-        app:layout_constraintStart_toEndOf="@id/profile_card_IMG_points"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/profile_card_IMG_points"
-        app:layout_constraintBottom_toBottomOf="@id/profile_card_IMG_points"
-        android:text="@string/hello_blank_fragment"
-        />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.2"
-        android:lines="1"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMaxTextSize="25sp"
-        android:padding="15dp"
-        android:id="@+id/profile_card_LBL_total_sails"
+        app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/profile_card_IMG_picture"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/hello_blank_fragment"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/profile_LAY_image"
+        android:layout_marginStart="20dp"
+        >
+
+
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/profile_IMG_picture"
+            android:background="@android:color/holo_red_dark"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.ProfilePictureCorners"
+            android:padding="10dp"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <!-- info layout will be linked to the image, therefore its in an other constraint layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintStart_toEndOf="@id/profile_LAY_image"
+        app:layout_constraintTop_toTopOf="@id/profile_LAY_image"
+        app:layout_constraintBottom_toBottomOf="@id/profile_LAY_image"
+        android:paddingStart="15dp"
+        android:paddingEnd="0dp"
+        android:id="@+id/profile_LAY_info"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="@string/app_name"
+            app:layout_constraintHeight_percent="0.4"
+            android:autoSizeMaxTextSize="30sp"
+            android:autoSizeTextType="uniform"
+            android:padding="5dp"
+            android:id="@+id/profile_LBL_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="h,1:1"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintTop_toBottomOf="@id/profile_LBL_name"
+            android:id="@+id/profile_IMG_points"
+            android:background="@android:color/holo_blue_light"
+            app:layout_constraintStart_toStartOf="parent"
+            android:contentDescription="@string/points"
+            />
+
+            <TextView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:id="@+id/profile_LBL_points_count"
+            android:autoSizeMaxTextSize="22sp"
+            android:autoSizeTextType="uniform"
+            android:text="@string/points"
+            android:padding="5dp"
+            app:layout_constraintStart_toEndOf="@id/profile_IMG_points"
+            app:layout_constraintTop_toTopOf="@id/profile_IMG_points"
+            app:layout_constraintBottom_toBottomOf="@id/profile_IMG_points"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.3"
+            android:id="@+id/profile_LBL_sails_count"
+            android:autoSizeMaxTextSize="22sp"
+            android:autoSizeTextType="uniform"
+            android:text="@string/sails"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="top"
+            />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
 
