--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activities.GalleryActivity"
     android:orientation="vertical"
     android:weightSum="1">
@@ -12,6 +13,54 @@
         android:layout_height="0dp"
         android:layout_weight="0.9"
         >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/gallery_INV_1"
+            app:layout_constraintHeight_percent="0.1"
+            />
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.2"
+            android:name="com.idan_koren_israeli.sailtracker.ProfileCard"
+            app:layout_constraintTop_toBottomOf="@id/gallery_INV_1"
+            tools:layout="@layout/fragment_profile_card"
+            android:id="@+id/gallery_FRAG_profile"
+            />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/gallery_FRAG_profile"
+            android:id="@+id/gallery_INV_2"
+            app:layout_constraintHeight_percent="0.05"
+            />
+        
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/gallery_INV_2"
+            app:layout_constraintHeight_percent="0.6"
+            android:id="@+id/gallery_FRAG_images"
+            android:name="com.idan_koren_israeli.sailtracker.PhotoCluster"
+            tools:layout="@layout/fragment_photo_cluster"
+            />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.125"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="25dp"
+            android:id="@+id/gallery_FBTN_add"
+            />
 
 
 
