--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.2"
-            android:name="com.idan_koren_israeli.sailtracker.ProfileCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileCard"
             app:layout_constraintTop_toBottomOf="@id/gallery_INV_1"
             tools:layout="@layout/fragment_profile_card"
             android:id="@+id/gallery_FRAG_profile"
@@ -46,9 +46,9 @@
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/gallery_INV_2"
             app:layout_constraintHeight_percent="0.6"
-            android:id="@+id/gallery_FRAG_images"
-            android:name="com.idan_koren_israeli.sailtracker.PhotoCluster"
-            tools:layout="@layout/fragment_photo_cluster"
+            android:id="@+id/gallery_FRAG_collectio"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.PhotoCollection"
+            tools:layout="@layout/fragment_photo_collection"
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -74,7 +74,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.NavigationBar"
+        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBar"
         tools:layout="@layout/fragment_navigation_bar" />
 
 </LinearLayout>
