--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.HomeActivity"
-    android:orientation="vertical"
-    android:weightSum="1">
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1"
+        >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -57,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/home_INV_3"
             android:id="@+id/home_FRAG_profile"
-            android:name="com.idan_koren_israeli.sailtracker.ProfileCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileCard"
             tools:layout="@layout/fragment_profile_card"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
@@ -82,7 +88,7 @@
             app:layout_constraintBottom_toTopOf="@id/home_INV_4"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:name="com.idan_koren_israeli.sailtracker.NextSailCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.NextSailCard"
             tools:layout="@layout/fragment_next_sail_card"
             android:id="@+id/home_FRAG_next_sailing"
             />
@@ -111,7 +117,34 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.NavigationBar"
+        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBar"
         tools:layout="@layout/fragment_navigation_bar" />
 
-</LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#B2191919"
+        android:weightSum="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.65"
+            android:layout_margin="40dp"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.LoginFragment"
+            android:id="@+id/home_FRAG_login"
+            tools:layout="@layout/fragment_login"
+            />
+
+
+    </LinearLayout>
+
+
+</FrameLayout>
