--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -129,18 +129,17 @@
         android:background="#B2191919"
         android:weightSum="1"
         android:orientation="vertical"
+        android:id="@+id/home_LAY_login"
         android:gravity="center"
         >
 
 
-        <fragment
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.65"
             android:layout_margin="40dp"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.LoginFragment"
-            android:id="@+id/home_FRAG_login"
-            tools:layout="@layout/fragment_login"
+            android:id="@+id/home_FRAG_login_placeholder"
             />
 
 
