--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHeight_percent="0.2"
         android:layout_marginTop="50dp"
         android:id="@+id/login_LBL_message"
-        android:text="@string/log_in_message"
+        android:text="@string/login_phone"
         android:autoSizeTextType="uniform"
         android:padding="10dp"
         android:gravity="center"
@@ -41,6 +41,48 @@
         android:autofillHints="0"
         />
 
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.1"
+        android:ems="6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/login_LBL_message"
+        android:autoSizeTextType="uniform"
+        android:id="@+id/login_EDT_code_box"
+        android:inputType="number"
+        android:hint="@string/example_code"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:gravity="center"
+        android:visibility="gone"
+        android:autofillHints="0"
+        />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.1"
+        android:ems="10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/login_LBL_message"
+        android:autoSizeTextType="uniform"
+        android:id="@+id/login_EDT_name_box"
+        android:inputType="textPersonName"
+        android:hint="@string/example_code"
+        android:layout_marginEnd="30dp"
+        android:layout_marginStart="30dp"
+        android:gravity="center"
+        android:visibility="gone"
+        android:autofillHints="0"
+        />
+
+
     <Button
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -55,7 +97,6 @@
         android:autoSizeTextType="uniform"
         android:padding="20dp"
         android:id="@+id/login_BTN_next"
-
 
         />
 
