--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/home_INV_3"
             android:id="@+id/home_FRAG_profile"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileFragment"
             tools:layout="@layout/fragment_profile_card"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
@@ -88,7 +88,7 @@
             app:layout_constraintBottom_toTopOf="@id/home_INV_4"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.NextSailCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.NextSailFragment"
             tools:layout="@layout/fragment_next_sail_card"
             android:id="@+id/home_FRAG_next_sailing"
             />
@@ -117,7 +117,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBar"
+        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
     </LinearLayout>
@@ -134,12 +134,14 @@
         >
 
 
-        <FrameLayout
+        <fragment
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.65"
             android:layout_margin="40dp"
-            android:id="@+id/home_FRAG_login_placeholder"
+            android:id="@+id/home_FRAG_login"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.LoginFragment"
+            tools:layout="@layout/fragment_login"
             />
 
 
