--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.2"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileCard"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileFragment"
             app:layout_constraintTop_toBottomOf="@id/search_SEARCH"
             tools:layout="@layout/fragment_profile_card"
             android:id="@+id/search_FRAG_profile"
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toBottomOf="@id/search_INV_1"
             app:layout_constraintHeight_percent="0.6"
             android:id="@+id/search_FRAG_collection"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.PhotoCollection"
+            android:name="com.idan_koren_israeli.sailtracker.fragments.PhotoCollectionFragment"
             tools:layout="@layout/fragment_photo_collection"
             />
 
@@ -65,7 +65,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBar"
+        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
 </LinearLayout>
