--- a/app/src/main/res/layout/fragment_next_sail_card.xml
+++ b/app/src/main/res/layout/fragment_next_sail_card.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragments.NextSailCard"
+    tools:context=".fragments.NextSailFragment"
     android:weightSum="1">
 
     <TextView
