--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -52,14 +52,16 @@
             />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fabSize="normal"
+            android:src="@drawable/ic_baseline_photo_camera_24"
+            android:tint="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.125"
-            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_margin="25dp"
-            android:id="@+id/gallery_FBTN_add"
+            android:id="@+id/gallery_FAB_add_photo"
+            android:contentDescription="@string/take_photo"
             />
 
 
