--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.HomeActivity"
+    tools:context=".home.HomeActivity"
     >
 
 
@@ -64,7 +64,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/home_INV_3"
             android:id="@+id/home_FRAG_profile"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.ProfileFragment"
+            android:name="com.idan_koren_israeli.sailtracker.home.ProfileFragment"
             tools:layout="@layout/fragment_profile_card"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
@@ -89,7 +89,7 @@
             app:layout_constraintBottom_toTopOf="@id/home_INV_4"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.NextSailFragment"
+            android:name="com.idan_koren_israeli.sailtracker.home.NextSailFragment"
             tools:layout="@layout/fragment_next_sail_card"
             android:id="@+id/home_FRAG_next_sailing"
             />
@@ -118,7 +118,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:id="@+id/home_FRAG_navigator_bar"
-        android:name="com.idan_koren_israeli.sailtracker.fragments.NavigationBarFragment"
+        android:name="com.idan_koren_israeli.sailtracker.common.NavigationBarFragment"
         tools:layout="@layout/fragment_navigation_bar" />
 
     </LinearLayout>
@@ -141,7 +141,7 @@
             android:layout_weight="0.65"
             android:layout_margin="40dp"
             android:id="@+id/home_FRAG_login"
-            android:name="com.idan_koren_israeli.sailtracker.fragments.LoginFragment"
+            android:name="com.idan_koren_israeli.sailtracker.home.LoginFragment"
             tools:layout="@layout/fragment_login"
             />
 
