--- a/app/src/main/res/layout/fragment_photo_collection.xml
+++ b/app/src/main/res/layout/fragment_photo_collection.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.PhotoCollectionFragment">
+    tools:context=".gallery.PhotoCollectionFragment">
 
-    <!-- items here are photos as cells, like Instagram feed-->
+    <!-- items here are photos as cells, like an Instagram feed-->
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
