--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -10,245 +10,297 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintHeight_percent="0.15"
         android:layout_marginTop="10dp"
         android:text="@string/add_event_title"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         android:autoSizeTextType="uniform"
-        android:padding="10dp"
+        android:padding="15dp"
         android:id="@+id/add_event_LBL_title"
         />
 
-    <RadioGroup
+
+    <ViewFlipper
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:id="@+id/add_event_LAY_flipper"
+        android:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/add_event_LBL_title"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/add_event_RAT_select_type"
-        app:layout_constraintDimensionRatio="h,3:1"
-        android:weightSum="3"
-        android:padding="5dp"
+        app:layout_constraintBottom_toTopOf="@id/add_event_LAY_buttons"
+        android:layout_margin="10dp"
+
         >
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
+
+
+        <!-- Step 1: name and type -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/add_event_RBTN_free_event"
-            android:background="@android:color/holo_green_light"
-            android:padding="5dp"
-            android:layout_margin="5dp"
-            android:text="@string/free_event"
-            android:autoSizeTextType="uniform"
-            android:lines="1"
-            />
+            android:id="@+id/add_event_LAY_step_1"
+            >
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
+
+            <TextView
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.2"
+                android:text="@string/add_event_name_label"
+                android:autoSizeTextType="uniform"
+                android:padding="30dp"
+                android:gravity="center"
+                android:lines="1"
+                android:id="@+id/add_event_LBL_name"
+                />
+
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.15"
+                android:id="@+id/add_event_EDT_name"
+                android:hint="@string/add_event_name_hint"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_name"
+                android:gravity="center"
+                android:autofillHints="@string/add_event_name_label"
+                android:layout_margin="15dp"
+                android:inputType="text"
+                android:ems="12"
+                android:autoSizeTextType="uniform"
+                />
+
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@id/add_event_EDT_name"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal"
+                android:id="@+id/add_event_RAT_select_type"
+                app:layout_constraintDimensionRatio="h,3:1"
+                android:weightSum="3"
+                android:padding="5dp"
+                >
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:id="@+id/add_event_RBTN_free_event"
+                    android:background="@android:color/holo_green_light"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+                    android:text="@string/free_event"
+                    android:autoSizeTextType="uniform"
+                    android:lines="1"
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:id="@+id/add_event_RBTN_members_sail"
+                    android:background="@android:color/holo_green_light"
+                    android:text="@string/members_sail"
+                    android:lines="1"
+                    android:autoSizeTextType="uniform"
+                    android:padding="5dp"
+                    android:layout_margin="5dp"
+
+                    />
+
+                <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:id="@+id/add_event_event_RBTN_guided_sail"
+                    android:background="@android:color/holo_green_light"
+                    android:layout_margin="5dp"
+                    android:text="@string/guided_sail"
+                    android:lines="1"
+                    android:autoSizeTextType="uniform"
+                    android:padding="5dp"
+                    />
+
+            </RadioGroup>
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!-- Step 2: time -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/add_event_RBTN_members_sail"
-            android:background="@android:color/holo_green_light"
-            android:text="@string/members_sail"
-            android:lines="1"
-            android:autoSizeTextType="uniform"
-            android:padding="5dp"
-            android:layout_margin="5dp"
+            android:id="@+id/add_event_LAY_step_2"
+            >
 
-            />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.2"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
+                android:autoSizeTextType="uniform"
+                android:lines="1"
+                android:padding="20dp"
+                android:text="@string/add_event_time_start_label"
+                android:id="@+id/add_event_LBL_start_time"
+                />
 
-        <com.google.android.material.radiobutton.MaterialRadioButton
-            android:layout_width="0dp"
-            android:layout_weight="1"
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.2"
+                android:gravity="center"
+                android:autoSizeTextType="uniform"
+                android:lines="1"
+                android:padding="20dp"
+                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_start_time"
+                android:text="@string/example_hour"
+                android:id="@+id/add_event_BTN_start_time"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.2"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/add_event_BTN_start_time"
+                android:autoSizeTextType="uniform"
+                android:lines="1"
+                android:padding="20dp"
+                android:text="@string/add_event_time_start_label"
+                android:id="@+id/add_event_LBL_end_time"
+                />
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintHeight_percent="0.2"
+                android:gravity="center"
+                android:autoSizeTextType="uniform"
+                android:lines="1"
+                android:padding="20dp"
+                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_end_time"
+                android:text="@string/example_hour"
+                android:id="@+id/add_event_BTN_end_time"
+                />
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- Step 3: max participant, price, description -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/add_event_event_RBTN_guided_sail"
-            android:background="@android:color/holo_green_light"
-            android:layout_margin="5dp"
-            android:text="@string/guided_sail"
-            android:lines="1"
-            android:autoSizeTextType="uniform"
-            android:padding="5dp"
-            />
+            android:id="@+id/add_event_LAY_step_3"
+            >
 
-    </RadioGroup>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                app:layout_constraintHeight_percent="0.2"
+                android:gravity="center_horizontal"
+                android:id="@+id/add_event_LAY_price_participants"
+                app:layout_constraintTop_toTopOf="parent"
+                android:weightSum="1"
+                >
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ems="4"
+                    android:hint="@string/add_event_max_participants"
+                    android:id="@+id/add_event_EDT_max_participants"
+                    />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ems="4"
+                    android:id="@+id/add_event_EDT_price"
+                    android:hint="@string/price"
+                    />
+
+            </LinearLayout>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="40dp"
+                android:ems="4"
+                android:enabled="true"
+                android:hint="@string/add_event_description"
+                app:layout_constraintTop_toBottomOf="@id/add_event_LAY_price_participants"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/add_event_EDT_description"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+    </ViewFlipper>
+    
+
+
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:weightSum="1"
-        app:layout_constraintHeight_percent="0.1"
-        android:id="@+id/add_event_LAY_name"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/add_event_RAT_select_type"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        >
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="match_parent"
-            android:text="@string/add_event_name_label"
-            android:autoSizeTextType="uniform"
-            android:padding="3dp"
-            android:gravity="center"
-            android:lines="1"
-            />
-
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.6"
-            android:id="@+id/add_event_EDT_name"
-            android:hint="@string/add_event_name_hint"
-            android:gravity="center"
-            android:autofillHints="@string/add_event_name_label"
-            android:layout_margin="15dp"
-            android:inputType="text"
-            android:ems="12"
-            android:autoSizeTextType="uniform"
-            />
-
-
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        android:id="@+id/add_event_LAY_time"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/add_event_LAY_name"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        >
-
-        <TimePicker
-            android:id="@+id/add_event_TP_start"
-            android:layout_height="match_parent"
-            android:layout_width="20dp"
-            android:layout_weight="1"
-            android:timePickerMode="clock"
-            />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:text="@string/dash"
-            android:gravity="center"
-            android:autoSizeTextType="uniform"
-
-            />
-
-        <TimePicker
-            android:id="@+id/add_event_TP_end"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:timePickerMode="clock"
-            />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        android:id="@+id/add_event_LAY_price_and_participants"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/add_event_LAY_time"
-        android:layout_marginTop="20dp"
-        >
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            />
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="match_parent"
-            android:autoSizeTextType="uniform"
-            android:ems="4"
-            android:id="@+id/add_event_EDT_price"
-            android:hint="@string/add_event_max_participants"
-            android:lines="1"
-            android:maxLines="1"
-            android:inputType="number"
-            android:autofillHints="0"
-            android:gravity="center"
-
-            />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            />
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_height="match_parent"
-            android:autoSizeTextType="uniform"
-            android:ems="4"
-            android:hint="@string/price"
-            android:inputType="number"
-            android:autofillHints="0"
-            android:gravity="center"
-            android:lines="1"
-            android:id="@+id/add_event_EDT_max_participants"
-            />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            />
-
-
-    </LinearLayout>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/add_event_LAY_price_and_participants"
-        app:layout_constraintBottom_toTopOf="@+id/add_event_BTN_finish"
-        android:lines="2"
-        android:maxLines="2"
-        android:inputType="textMultiLine"
-        android:hint="@string/add_event_description"
-        android:layout_margin="20dp"
-        />
-
-
-
-
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/add_event_LAY_buttons"
+        app:layout_constraintHeight_percent="0.15"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.12"
-        app:layout_constraintDimensionRatio="1.8:1"
-        android:layout_marginTop="20dp"
-        android:text="@string/add"
-        android:autoSizeTextType="uniform"
-        android:padding="20dp"
-        android:id="@+id/add_event_BTN_finish"
-        />
+        android:weightSum="1"
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        >
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="0dp"
+            android:layout_weight="0.4"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:autoSizeTextType="uniform"
+            android:padding="20dp"
+            android:text="@string/back"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="0dp"
+            android:layout_weight="0.4"
+            android:layout_height="match_parent"
+            android:autoSizeTextType="uniform"
+            android:padding="20dp"
+            android:text="@string/next"
+            />
+
+
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
