Implemented view flipper and animations to AddEventFragment

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -48,6 +48,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="40dp"
             android:id="@+id/calendar_LAY_add_event_placeholder"
             />
 
