--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -42,6 +42,7 @@
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.5"
             app:layout_constraintTop_toBottomOf="@id/calendar_LBL_selected_day"
+            android:id="@+id/calendar_RCY_daily_events"
             />
 
 
