--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/darker_gray"
-    tools:context=".firebase.LoginFragment">
+    tools:context=".home.LoginFragment">
 
     <TextView
         android:layout_width="match_parent"
